// protoc --go_out=. --go_opt=paths=source_relative  --go-grpc_out=. --go-grpc_opt=paths=source_relative ./closeTrade.proto 

syntax = "proto3";
option go_package = "trading-engine/protos/closeTrade";
package closeTrade;


// 消息定义
message CloseRequest {
   string symbol = 1;   // 标的
}

message CloseReply {
   int32 code = 1; // 状态码
   string msg = 2;  // 信息
}

// 服务定义
service CloseService{
    // 包含一个关闭指定标的撮合的方法
    rpc CloseTrade(CloseRequest) returns (CloseReply) {}
}